# NLP_701

./: .gitignore  ITS_end_to_end_demo.ipynb  README.md  pyproject.toml  split_dataset.py
artifacts/: plausibility_layer10_last16.pt  plausibility_layer14_last16.pt  plausibility_layer16_last32.pt  plausibility_layer24_last32.pt  plausibility_layer8_last32.pt
artifacts/vectors/: latest_qwen3_0.6b.pt  qwen3_0.6b_layer16_last32.pt
artifacts_qwen4b/: plausibility_layer16_last32.pt  plausibility_layer16_last32_mc.pt
configs/: base.yaml
data/: train.jsonl
itsteer/: __init__.py  data.py  eval_metrics.py  eval_runner.py  hooks.py  prompts.py  steering.py  tracking.py  utils.py  vectorizers.py
results/: experiment_log.md
results/llama3_8b/: eval_baseline.json  eval_steered.json
results/qwen3_0.6b/: alpha_search_best.json  eval_baseline.json
scripts/: compute_vectors.py  download_data.py  evaluate.py  run_pipeline.py  search_alpha.py
tests/: test_shapes.py
wandb/: latest-run
wandb/run-20251119_220840-4bigkshn/: run-4bigkshn.wandb
wandb/run-20251119_221052-9y8hhqes/: run-9y8hhqes.wandb
wandb/run-20251119_221308-tt8z6wze/: run-tt8z6wze.wandb
wandb/run-20251119_221426-z5vhpeit/: run-z5vhpeit.wandb
wandb/run-20251120_144724-r4veiffc/: run-r4veiffc.wandb
wandb/run-20251120_144841-u8bo5nty/: run-u8bo5nty.wandb
wandb/run-20251120_144932-v2oggy7a/: run-v2oggy7a.wandb
wandb/run-20251120_145331-c38plkie/: run-c38plkie.wandb
wandb/run-20251120_145414-kvhsu6wl/: run-kvhsu6wl.wandb
wandb/run-20251120_221254-lva8mxcb/: run-lva8mxcb.wandb
(+199 files in other folders)
