[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itsteer"
version = "0.1.0"
description = "Inference-Time Steering for SemEval-2026 Task 11 (content-vs-formal reasoning)"
authors = [{name="Your Team", email="example@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "datasets>=2.19.0",
    "scikit-learn>=1.3.2",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tyro>=0.8.5",
    "pyyaml>=6.0.1",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.1",
    "wandb>=0.16.0"
]

[tool.setuptools.packages.find]
where = [""]
include = ["itsteer*"]
